--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -74,7 +74,7 @@
                                                 <strong>Vehiculo</strong>
                                                 @Html.DevExpress().ComboBox(settings =>
                                    {
-                                       settings.Name = "Id_Vehiculo";
+                                       settings.Name = "IdVehiculo";
                                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                                        settings.SelectedIndex = 0;
                                        settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
