--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CentroCosto/CentroCosto.cshtml
@@ -19,6 +19,7 @@
         {
             @Html.HiddenFor(m => m.IdEmpresa)
             @Html.HiddenFor(m => m.IdCentroCosto)
+            @Html.HiddenFor(m => m.IdCAlmacenGas)
             <div class="block-header">
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-12">
