--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/_Clientes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/_Clientes.cshtml
@@ -29,10 +29,10 @@
             c.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
         settings.Columns.Add("TipoPersonaFiscal", "Tipo Persona");
-        settings.Columns.Add("RazonSocial", "Nombre/Razón social");
+        settings.Columns.Add("RazonSocial", "Nombre / Razón social");
         settings.Columns.Add("Rfc", "RFC");
-        settings.Columns.Add("limiteCreditoMonto", "CreditoMonto");
-        settings.Columns.Add("limiteCreditoDias", "Credito Dias");
+        settings.Columns.Add("limiteCreditoMonto", "Credito Monto");
+        settings.Columns.Add("limiteCreditoDias", "Crédito Dias");
         settings.Columns.Add("DescuentoXKilo", "Descuento");
         settings.Columns.Add("Celular", "Celular");
         settings.Columns.Add("Telefono1", "Teléfono");
