--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/_CuentasContables.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/_CuentasContables.cshtml
@@ -6,7 +6,7 @@
         settings.CallbackRouteValues = new
         {
             Controller = "CuentaContable",
-            Action = "GridCuentaContable"
+            Action = "Grid"
         };
         settings.KeyFieldName = "IdCuentaContable";
         settings.SettingsPager.Visible = true;
