--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Inicio.cshtml
@@ -76,7 +76,7 @@
                     <div class="card text-center">
                         <div class="body">
                             <p class="m-b-20"><i class="material-icons zmdi-hc-3x col-green">functions</i></p>
-                            <span>Total de venta</span>
+                            <span>Total de Venta</span>
                             <h3 class="m-b-10 number count-to" data-from="0" data-to="@ViewBag.VentasRema.TotalVetna" data-speed="2000" data-fresh-interval="700">@ViewBag.VentasRema.TotalVetna</h3>
                             <small class="text-muted">Kilogramos</small>
                         </div>
@@ -323,7 +323,7 @@
                                         <tr>
                                             <th>Cliente</th>
                                             <th>Monto ($)</th>
-                                            <th>Dias de vencido</th>
+                                            <th>Días de vencido</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -360,7 +360,7 @@
                                         <tr>
                                             <th>Cliente</th>
                                             <th>Monto ($)</th>
-                                            <th>Dias de vencido</th>
+                                            <th>Días de vencido</th>
                                         </tr>
                                     </thead>
                                     <tbody>
