--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -200,12 +200,12 @@
                                     @if (rol.ReporteCuentasXPagar)
                                     {
                                     <li>@Html.ActionLink("Cuentas por pagar", "CuentasXPagar", "Reportes")</li>
-                                    <li>@Html.ActionLink("Cuentas Cosolidadas", "CuentaConsolidada", "Reportes")</li>
+                                    <li>@Html.ActionLink("Cuentas Consolidadas", "CuentaConsolidada", "Reportes")</li>
                                     }
                                     @if (rol.ReportePuntoVenta)
                                     {
                                     <li>@Html.ActionLink("Inv. Punto de venta", "InventarioXPuntoVenta", "Reportes")</li>
-                                    <li>@Html.ActionLink("Calculo de comisiones", "Comisiones", "Reportes")</li>
+                                    <li>@Html.ActionLink("Cálculo de comisiones", "Comisiones", "Reportes")</li>
                                     }
                                     @if (rol.ReportePrecioVenta)
                                     {
@@ -221,11 +221,11 @@
                                     }
                                     @if (rol.ReporteOrdenCompra)
                                     {
-                                    <li>@Html.ActionLink("Ordenes de Compra", "OrdenCompraRep", "Reportes")</li>
+                                    <li>@Html.ActionLink("Órdenes de Compra", "OrdenCompraRep", "Reportes")</li>
                                     }
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
-                                    <li>@Html.ActionLink("Rendimiento Vehicular", "RendimientoVehicular", "Reportes")</li>
+                                    <li>@Html.ActionLink("Rendimiento Vehícular", "RendimientoVehicular", "Reportes")</li>
                                     }
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
