--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
@@ -1,6 +1,5 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.ClienteLocacionMod
-@*@using MVC.Presentacion.Models.Catalogos
-    @model List<ClienteLocacionMod>*@
+
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -23,9 +22,9 @@
         $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
     }
     $(function () {
-        $('select').on('change', function () {
-            if ($('#ddlPais').val() !== "1") {
-                $('#ddlEdo').parent().hide();
+        $('table[id=IdPais] td').on('click', function () {
+            if (IdPais.GetValue() !== "1") {
+                $('table[id=IdEstadoRep]').parent().hide();
                 $('#txtEdoP').show();
             }
 
@@ -131,16 +130,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        @*<div class="col-lg-3 col-md-3 col-sm-3">
-                                                <div class="form-group">
-                                                    <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
-                                                        @foreach (var lst in ViewBag.ListaPaises)
-                                                        {
-                                                            <option value="@lst.IdPais">@lst.Pais</option>
-                                                        }
-                                                    </select>
-                                                </div>
-                                            </div>*@
+                                     
                                         <div class="col-lg-3 col-md-3 col-sm-3">
                                             <div class="form-group">
                                                     <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
@@ -152,22 +142,22 @@
                                                 </div>
                                             @*<div class="form-group">
                                                 @Html.DevExpress().ComboBox(settings =>
-                                       {
-                                           settings.Name = "cliente.Locacion.IdPais";
-                                           settings.Width = 180;
-                                            //settings.SelectedIndex = Model.IdPais;
-                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                           settings.Theme = "Material";
-                                           settings.Properties.TextField = "Pais";
-                                           settings.Properties.ValueField = "IdPais";
-                                           settings.Properties.ValueType = typeof(byte);
-                                           settings.ClientEnabled = true;
-                                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
-                                       }).BindList(ViewBag.ListaPaises).GetHtml()
-                                                @Html.ValidationMessageFor(model => model.IdPais, "", new { @class = "text-danger" })
+                                               {
+                                                   settings.Name = "IdPais";
+                                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                                 
+                                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                   settings.Theme = "Material";
+                                                   settings.Properties.TextField = "Pais";
+                                                   settings.Properties.ValueField = "IdPais";
+                                                   settings.Properties.ValueType = typeof(byte);
+                                                   settings.ClientEnabled = true;
+                                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                               }).BindList(ViewBag.ListaPaises).GetHtml()
+                                                @Html.ValidationMessageFor(model => model.IdPais, "", new { @class = "text-danger" })*@
 
-                                            </div>*@
+                                            @*</div>*@
 
                                         </div>
                                         <div class="col-lg-1 col-md-1 col-sm-1">
@@ -182,6 +172,19 @@
                                         <div class="col-lg-3 col-md-3 col-sm-3">
                                             <div class="form-group">
                                                 <input type="text" name="EstadoProvincia" id="txtEdoP" class="form-control hid" placeholder="Estado" />
+                                                @*@Html.DevExpress().ComboBox(settings =>
+                                           {
+                                               settings.Name = "IdEstadoRep";                                              
+                                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                               settings.Theme = "Material";
+                                               settings.Properties.TextField = "Estado";
+                                               settings.Properties.ValueField = "IdEstadoRep";
+                                               settings.Properties.ValueType = typeof(int);
+                                               settings.ClientEnabled = true;
+                                               //settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                           }).BindList(ViewBag.ListaEstados).GetHtml()*@
                                                 <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
                                                     @foreach (var lst in ViewBag.ListaEstados)
                                                     {
