--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -31,7 +31,7 @@
             $('#div_hidePM').show();
             $('#div_hideRP').show();
             $('#hide_razonS').show();
-        }     
+        }
     }
 </script>
 <!-- JS includes -->
@@ -62,21 +62,21 @@
                                     }
                                 </select>*@
                             @Html.DevExpress().ComboBox(settings =>
-                       {
-                           settings.Name = "IdEmpresa";
-                           settings.Width = 180;
-                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           settings.Theme = "Material";
-                           settings.Properties.TextField = "NombreComercial";
-                           settings.Properties.ValueField = "IdEmpresa";
-                           settings.PreRender = (s, e) =>
                            {
-                               MVCxComboBox combo = s as MVCxComboBox;
-                               combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                               combo.SelectedIndex = 0;
-                           };
-                       }).BindList(ViewBag.Empresas).GetHtml()
+                               settings.Name = "IdEmpresa";
+                               settings.Width = 180;
+                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                               settings.Theme = "Material";
+                               settings.Properties.TextField = "NombreComercial";
+                               settings.Properties.ValueField = "IdEmpresa";
+                               settings.PreRender = (s, e) =>
+                               {
+                                   MVCxComboBox combo = s as MVCxComboBox;
+                                   combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                                   combo.SelectedIndex = 0;
+                               };
+                           }).BindList(ViewBag.Empresas).GetHtml()
                             @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
                         </div>
                     </div>
@@ -101,24 +101,24 @@
                                                 }
                                             </select>*@
                                         @Html.DevExpress().ComboBox(settings =>
-                                   {
-                                       settings.Name = "IdTipoPersona";
-                                       settings.Width = 180;
-                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                       settings.Theme = "Material";
-                                       settings.Properties.TextField = "Descripcion";
-                                       settings.Properties.ValueField = "IdTipoPersona";
-                                       settings.ClientEnabled = true;
-                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeFilter";
-                                       settings.PreRender = (s, e) =>
                                        {
-                                           MVCxComboBox combo = s as MVCxComboBox;
-                                           combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                                           combo.Properties.ValueType = typeof(int);
-                                           combo.SelectedIndex = 0;
-                                       };
-                                   }).BindList(ViewBag.TipoPersona).GetHtml()
+                                           settings.Name = "IdTipoPersona";
+                                           settings.Width = 180;
+                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                           settings.Theme = "Material";
+                                           settings.Properties.TextField = "Descripcion";
+                                           settings.Properties.ValueField = "IdTipoPersona";
+                                           settings.ClientEnabled = true;
+                                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeFilter";
+                                           settings.PreRender = (s, e) =>
+                                           {
+                                               MVCxComboBox combo = s as MVCxComboBox;
+                                               combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                                               combo.Properties.ValueType = typeof(int);
+                                               combo.SelectedIndex = 0;
+                                           };
+                                       }).BindList(ViewBag.TipoPersona).GetHtml()
                                         @Html.ValidationMessageFor(m => m.IdTipoPersona, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
@@ -132,22 +132,22 @@
                                                 }
                                             </select>*@
                                         @Html.DevExpress().ComboBox(settings =>
-                           {
-                               settings.Name = "IdRegimenFiscal";
-                               settings.Width = 180;
-                               settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                               settings.Theme = "Material";
-                               settings.Properties.TextField = "Descripcion";
-                               settings.Properties.ValueField = "IdRegimenFiscal";
-                               settings.PreRender = (s, e) =>
-                               {
-                                   MVCxComboBox combo = s as MVCxComboBox;
-                                   combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                                   combo.Properties.ValueType = typeof(int);
-                                   combo.SelectedIndex = 0;
-                               };
-                           }).BindList(ViewBag.Regimen).GetHtml()
+                                       {
+                                           settings.Name = "IdRegimenFiscal";
+                                           settings.Width = 180;
+                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                           settings.Theme = "Material";
+                                           settings.Properties.TextField = "Descripcion";
+                                           settings.Properties.ValueField = "IdRegimenFiscal";
+                                           settings.PreRender = (s, e) =>
+                                           {
+                                               MVCxComboBox combo = s as MVCxComboBox;
+                                               combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
+                                               combo.Properties.ValueType = typeof(int);
+                                               combo.SelectedIndex = 0;
+                                           };
+                                       }).BindList(ViewBag.Regimen).GetHtml()
                                         @Html.ValidationMessageFor(m => m.IdRegimenFiscal, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
@@ -246,71 +246,71 @@
                         </div>
                     </div>
                 </div>
-            </div>          
-                    <div class="card">
-                        <div class="header">
-                            <h2><strong>Condición del crédito y descuento</strong></h2>
+            </div>
+            <div class="card">
+                <div class="header">
+                    <h2><strong>Condición del crédito y descuento</strong></h2>
+                </div>
+                <div class="body">
+                    <div class="row clearfix">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                Límite de crédito:
+                            </div>
                         </div>
-                        <div class="body">
-                            <div class="row clearfix">
-                                <div class="col-md-3" >
-                                    <div class="form-group">
-                                        Límite de crédito:
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        Kilos de Credito<input name="limiteCreditoMonto" class="form-control" type="number" />
-                                    </div>
-                                </div>
-                                <div class="col-md-3" >
-                                    <div class="form-group">
-                                        <div>
-                                            Días para pagar 
-                                            <input name="limiteCreditoDias" class="form-control" type="number" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3" >
-                                    <div class="form-group">
-                                        <div>
-                                            Credito disponible:
-                                            <input name="CreditoDisponibleMonto" class="form-control" type="number" />
-                                        </div>
-                                    </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                Listros de Crédito<input name="limiteCreditoMonto" class="form-control" type="number" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <div>
+                                    Días para pagar
+                                    <input name="limiteCreditoDias" class="form-control" type="number" />
                                 </div>
                             </div>
-                            <div class="row clearfix">
-                                <div class="col-md-3" style="max-width:15.666667%">
-                                    <div class="form-group">
-                                        <div>
-                                            Descuento:
-                                            <input name="DescuentoXKilo" class="form-control" type="number" />
-                                        </div>
-                                    </div>
-                                </div>                           
-                               
-                                <div class="col-md-2">
-                                    ¿Es Precio fijo?
-                                    <div class="form-group">
-                                        <label class="switch">
-                                            @Html.CheckBoxFor(m => m.EsFijo, new { @class = "form-control" })
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    Autorizar ventas con límite de crédito excedido
-                                    <div class="form-group center" >
-                                        <label class="switch">
-                                            @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <div>
+                                    Credito disponible:
+                                    <input name="CreditoDisponibleMonto" class="form-control" type="number" />
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="row clearfix">
+                        <div class="col-md-3" style="max-width:15.666667%">
+                            <div class="form-group">
+                                <div>
+                                    Descuento:
+                                    <input name="DescuentoXKilo" class="form-control" type="number" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2">
+                            ¿Es precio fijo?
+                            <div class="form-group">
+                                <label class="switch">
+                                    @Html.CheckBoxFor(m => m.EsFijo, new { @class = "form-control" })
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            Autorizar ventas con límite de crédito excedido
+                            <div class="form-group center">
+                                <label class="switch">
+                                    @Html.CheckBoxFor(m => m.VentaExtraordinaria, new { @class = "form-control" })
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="card">
