--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/Comisiones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/Comisiones.cshtml
@@ -34,7 +34,7 @@
                 <div class="block-header">
                     <div class="row clearfix">
                         <div class="col-lg-12 col-md-12 col-sm-12">
-                            <h2>Cubo de informacion</h2>
+                            <h2>Cubo de Información</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Comisiones</li>
@@ -59,7 +59,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <strong>Al dia</strong>
+                                    <strong>Al día</strong>
                                     <div class="form-group">
                                         @Html.DevExpress().DateEdit(settings =>
                                            {
