JSA - Avance cambios remanente

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
@@ -126,7 +126,7 @@
                             <div class="row clearfix">
                                 <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
                                     <div class="table-responsive">
-                                        @Html.Action("Pedidos", Model.Pedidos)                                        
+                                        @Html.Action("Pedidos")                                        
                                     </div>
                                 </div>
                             </div>
