AMN-cambios finalizar descarga

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/custom_spinner.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/custom_spinner.xml
@@ -5,4 +5,5 @@
     android:layout_height="wrap_content"
     android:maxLines="1"
     android:padding="10dp"
-    android:textSize="18sp" />
+    android:textSize="18sp"
+    android:textColor="@color/cardview_dark_background"/>
