--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_porcentaje_calibracion.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_porcentaje_calibracion.xml
@@ -7,12 +7,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/TVCalibracionPipaActivityTitulo"
@@ -76,6 +78,7 @@
                     android:layout_height="90dp"
                     android:layout_gravity="center"
                     android:layout_weight="2"
+                    android:background="@color/cardview_dark_background"
                     android:scaleY="2">
 
                 </NumberPicker>
@@ -97,6 +100,7 @@
                     android:layout_height="90dp"
                     android:layout_gravity="center"
                     android:layout_weight="2"
+                    android:background="@color/cardview_dark_background"
                     android:scaleY="2">
 
                 </NumberPicker>
@@ -114,11 +118,11 @@
 
             <Button
                 android:id="@+id/BtnCalibracionPipaActivitySiguiente"
+                style="@style/SagasTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                style="@style/SagasTheme.Button"
                 android:background="@drawable/ripple_effect"
                 android:padding="15sp"
                 android:text="@string/message_acept"
